Stop menu from jumping around with scrollbar

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -60,9 +60,10 @@ h1 {
   position: fixed;
   bottom: 0;
   right: 0;
+  /* (100vw - 100%) is scrollbar width */
+  padding-right: calc(32px - (100vw - 100%));
   padding-left: 8px;
   padding-bottom: 12px;
-  padding-right: 20px;
   background: #ffffff;
   box-shadow: 0px 0px 10px 10px #ffffff;
   border-top-left-radius: 10px;
